--- a/style.css
+++ b/style.css
@@ -80,6 +80,25 @@ nav{
     width: 100vw;
     display: flex;
     height: 80vh;
+    flex-direction: column;
+}
+.container3 .textos{
+    margin-top: 5%;
+    color: white;
+    text-shadow: #333333 2px 2px 2px;
+    width: 75%;
+    margin: 5% auto;
+    background-color: #9e4646;
+    border-radius: 20px;
+    padding: 50px;
+    text-align: center;
+}
+.container3 .textos h1{
+    font-size: 50px;
+}
+.container3 .textos p{
+    font-size: 20px;
+    margin-top: 50px;
 }
 .container4{
     background-color: white;
@@ -186,7 +205,8 @@ nav{
 .video1 video{
     width: 500px;
     height: 600px;
-    border-radius: 20px;
+    display: flex;
+
 }
 .video1 video:hover{
     transform: scale(1.05);
@@ -196,4 +216,38 @@ nav{
     color: white;
     text-align: center;
     margin-top: 40px;
+}
+.galeria{
+    background-color: #F2F2F2;
+    width: 100vw;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.fotos-galeria img{
+    width: 200px;
+    height: 150px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+.fotos-galeria{
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    gap: 20px;
+    margin-top: 20px;
+}
+.fotos-galeria img:hover{
+    transform: scale(1.05);
+}
+.mascara{
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
+    position: fixed;
+    top: 0;
+    visibility: hidden
+    ;
 }
