--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ nav{
 }
 .container2 .textos p{
     font-size: larger;
+    color: white;
 }
 .container2 .textos h1, h2{
     margin: 2% 0;
@@ -99,6 +100,7 @@ nav{
 .container3 .textos p{
     font-size: 20px;
     margin-top: 50px;
+    color: white;
 }
 .container4{
     background-color: white;
@@ -120,6 +122,7 @@ nav{
 .container4 .textos p{
     font-size: 20px;
     margin: 20px auto;
+    color: white;
 }
 .container4 .imagem{
     width: 40%;
@@ -176,6 +179,7 @@ nav{
 .serviço1 p{
     font-size: 15px;
     margin: 15px auto;
+    color: white;
 }
 .serviço1 img{
     width: 200px;
@@ -212,7 +216,7 @@ nav{
     transform: scale(1.05);
     transition: transform 0.3s ease;
 }
-.container6-videos h1, p{
+.container6-videos h1, .container6-videos p{
     color: white;
     text-align: center;
     margin-top: 40px;
@@ -227,15 +231,15 @@ nav{
     justify-content: center;
 }
 .fotos-galeria img{
-    width: 200px;
-    height: 150px;
+    width: 400px;
+    height: 300px;
     border-radius: 20px;
     cursor: pointer;
     transition: transform 0.3s ease;
 }
 .fotos-galeria{
     display: grid;
-    grid-template-columns: 200px 200px 200px;
+    grid-template-columns: 400px 400px 400px;
     gap: 20px;
     margin-top: 20px;
 }
@@ -250,4 +254,100 @@ nav{
     top: 0;
     visibility: hidden
     ;
+}
+.container8{
+    background-color: #9e4646;
+    width: 100vw;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px;
+    margin-top: 20px;
+}
+.preços-iniciais-imagem img{
+    width: 400px;
+    border-radius: 20px;
+}
+.preços-iniciais-imagem img:hover{
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
+.preços-iniciais{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 auto;
+    justify-content: space-around;
+}
+.preços-iniciais-textos{
+    width: 40%;
+}
+.preços-iniciais-textos h1{
+    color: white;
+    font-size: 50px;
+}
+.preços-iniciais-textos p{
+    color: white;
+    font-size: 20px;
+}
+.preços-iniciais-imagem{
+    width: 40%;
+    
+}
+.preços-iniciais-textos button{
+    background-color: #9e4646;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
+    width: 200px;
+    height: 40px;
+    border: 1px solid white;
+}
+.preços-iniciais-textos button:hover{
+    background-color: #bb6a6a;
+}
+footer{
+    background-color: #d8d8d8;
+    width: 100vw;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    text-align: center;
+    padding: 20px;
+    font-size: 15px;
+    gap: 20px;
+    flex-direction: column;
+}
+footer h1, p{
+    color: black;
+}
+footer img{
+    width: 30px;
+}
+ul{
+    list-style: none;
+}
+.footer-content{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin-top: 10px;
+   
+}
+.footer-content h1{
+    font-size: 50px;
+}
+.socials{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
 }
