--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
   background-color: #9e4646;
   transform: translateY(-3px);
   border: solid 1px white;
-  
+
 }
 
 /* Seções gerais */
@@ -208,7 +208,7 @@ section {
   padding: 30px 12px;
 }
 
-.container5 h1{
+.container5 h1 {
   margin-bottom: 20px;
   color: #333
 }
@@ -247,7 +247,9 @@ section {
   color: white;
   padding: 40px 12px;
 }
-.container6-videos h1, p {
+
+.container6-videos h1,
+p {
   text-align: center;
   margin-bottom: 20px
 }
@@ -299,6 +301,7 @@ section {
   margin-bottom: 20px;
   color: #333
 }
+
 .fotos-galeria {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -369,22 +372,28 @@ section {
   margin: auto;
   padding: 40px 20px
 }
-.footer-about, .footer-contact, .footer-social {
+
+.footer-about,
+.footer-contact,
+.footer-social {
   display: flex;
   flex-direction: column;
   gap: 12px
 }
+
 .footer-about img {
   margin: 15px auto;
   width: 150px;
   height: auto;
   align-items: center;
 }
+
 .footer h3 {
   margin-bottom: 12px;
   text-align: center;
   color: #9e4646
 }
+
 .footer-bottom {
   background: #f9f9f9;
   text-align: center;
@@ -427,6 +436,7 @@ section {
   transform: scale(.98);
   transition: opacity .25s, transform .25s
 }
+
 .social-icons {
   display: flex;
   gap: 12px;
@@ -434,6 +444,7 @@ section {
   align-items: center;
   margin-top: 10px
 }
+
 .social-icons img {
   width: 30px;
   align-items: center;
@@ -539,23 +550,66 @@ section {
     width: 200px;
   }
 
-  .container5 h1{
+  .container5 h1 {
     text-align: center;
   }
 
-  .preços-iniciais-textos, .preços-iniciais-imagem {
+  .preços-iniciais-textos,
+  .preços-iniciais-imagem {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  .preços-iniciais-textos h1{
-    margin-bottom:  15px;
-  }
-}
 
-/* pequenas melhorias visuais */
-a,
-button {
-  font-family: inherit;
+  .preços-iniciais-textos h1 {
+    margin-bottom: 15px;
+  }
+
+  .membros-equipe {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+  }
+.membro{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: white;
+    width: 80%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
 }
+    .membro img {
+      display: flex;
+      width: 150px;
+      margin: 10px auto;
+      align-items: center;
+      text-align: center;
+    }
+    #equipe{
+      margin-top: 30px;
+      margin-bottom: 30px;
+      padding: 20px;
+      background-color: #9e4646;
+      border-radius: 20px;
+      border: 3px solid black;
+      color: white;
+    }
+    .equipe h1 {
+      text-align: center;
+      color: black;
+    }
+  }
+
+  /* pequenas melhorias visuais */
+  a,
+  button {
+    font-family: inherit;
+  }
