--- a/style.css
+++ b/style.css
@@ -473,6 +473,30 @@ p {
   transform: scale(1)
 }
 
+
+  .aviso{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 50px 10px;
+    text-align: center;
+    background-color: #eee;
+  }
+  .aviso button{
+    background-color: #9e4646;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    height: 50px;
+    font-size: 15px;
+    width: 50%;
+    margin: 0 auto;
+  }
+  .aviso button:hover{
+    opacity: 0.6;
+    cursor: pointer;
+  }
+
 /* Responsividade - tablets and phones */
 @media (max-width: 1024px) {
   .logo {
@@ -489,6 +513,23 @@ p {
 
   .video-item {
     max-width: 320px
+  }
+
+    .aviso{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 50px 10px;
+    text-align: center;
+    background-color: #eee;
+  }
+  .aviso button{
+    background-color: #9e4646;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    height: 50px;
+    font-size: 15px;
   }
 }
 
@@ -572,7 +613,8 @@ p {
     gap: 30px;
     align-items: center;
   }
-.membro{
+
+  .membro {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -585,31 +627,51 @@ p {
     width: 80%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin: 0 auto;
-}
-    .membro img {
-      display: flex;
-      width: 150px;
-      margin: 10px auto;
-      align-items: center;
-      text-align: center;
-    }
-    #equipe{
-      margin-top: 30px;
-      margin-bottom: 30px;
-      padding: 20px;
-      background-color: #9e4646;
-      border-radius: 20px;
-      border: 3px solid black;
-      color: white;
-    }
-    .equipe h1 {
-      text-align: center;
-      color: black;
-    }
   }
 
-  /* pequenas melhorias visuais */
-  a,
-  button {
-    font-family: inherit;
+  .membro img {
+    display: flex;
+    width: 150px;
+    margin: 10px auto;
+    align-items: center;
+    text-align: center;
   }
+
+  #equipe {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: #9e4646;
+    border-radius: 20px;
+    border: 3px solid black;
+    color: white;
+  }
+
+  .equipe h1 {
+    text-align: center;
+    color: black;
+  }
+
+  .aviso{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 50px 10px;
+    text-align: center;
+    background-color: #eee;
+  }
+  .aviso button{
+    background-color: #9e4646;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    height: 50px;
+    font-size: 15px;
+  }
+}
+
+/* pequenas melhorias visuais */
+a,
+button {
+  font-family: inherit;
+}
