--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ p {
   height: auto;
   border-radius: 10px;
   transition: transform .25s;
-  
+
 }
 
 .fotos-galeria img:hover {
@@ -476,22 +476,109 @@ p {
   transform: scale(1)
 }
 
+.bnt-add {
+  margin-top: 15px;
+  padding: 10px 15px;
+  background-color: #9e4646;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+
+.membros-equipe {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+}
+
+.membro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: white;
+  width: 30%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+}
+
+.membro img {
+  display: flex;
+  width: 150px;
+  margin: 10px auto;
+  align-items: center;
+  text-align: center;
+}
+
+#equipe {
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 20px;
+  background-color: #9e4646;
+  border-radius: 20px;
+  border: 3px solid black;
+  color: white;
+}
+
+.equipe h1 {
+  text-align: center;
+  color: black;
+  width: 30%;
+}
+
+.h2-membro {
+  text-align: center;
+  color: black;
+  width: 100%;
+}
+
+.t-mensagem {
+  margin-top: 10px;
+  font-size: 14px;
+  text-align: center;
+}
+
+.form-membro {
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.form-membro button {
+  width: 40%;
+  margin: 0 auto;
+}
+
 
 .aviso {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: fixed;
-  /* Fica por cima da página */
+
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  /* Ocupa a tela toda */
+
   background: rgba(0, 0, 0, 0.6);
-  /* Fundo escurecido opcional */
-  color: white;
+
+  color: black;
   z-index: 1000;
 }
 
@@ -688,6 +775,7 @@ p {
   }
 
   #equipe {
+    width: 90%;
     margin-top: 30px;
     margin-bottom: 30px;
     padding: 20px;
@@ -727,6 +815,23 @@ p {
     border-radius: 10px;
     height: 50px;
     font-size: 15px;
+  }
+
+  .form-membro {
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 5px;
+  }
+
+  .form-membro button {
+    width: 70%;
+    margin: 0 auto;
+    font-size: 16px;
   }
 }
 
